--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>galeria</title>
     <link rel="stylesheet" href="../css/sttyle.css">
 
 </head>
 
 
-<body class="galeriamovil">
+<body class="galeriamovil" class="dispositivomobile">
     <header class="aline">
 
         <h1> Te damos un recorrido por nuestra Cafeteria </h1>
